# Waiter-Robot-Simulation

./: README.md
docs/: architecture.md  navigation_and_mapping.md  simulation_steps.md
ws_mobile/: frames_2025-09-15_22.15.26.gv  my_map.pgm  my_map.yaml
ws_mobile/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ws_mobile/install/mobile_robot/share/mobile_robot/: package.sh
ws_mobile/install/mobile_robot/share/mobile_robot/launch/: gazebo.launch.py
ws_mobile/install/mobile_robot/share/mobile_robot/model/: robot.gazebo  robot.xacro
ws_mobile/install/my_worlds/share/ament_index/resource_index/package_run_dependencies/: my_worlds
ws_mobile/install/my_worlds/share/my_worlds/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ws_mobile/install/my_worlds/share/my_worlds/cmake/: ament_cmake_export_dependencies-extras.cmake  my_worldsConfig.cmake
ws_mobile/install/my_worlds/share/my_worlds/worlds/: restaurant.world
ws_mobile/src/mobile_robot/: package.xml  setup.py
ws_mobile/src/mobile_robot/launch/: gazebo_model.launch.py
ws_mobile/src/mobile_robot/parameters/: bridge_parameters.yaml
ws_mobile/src/my_worlds/: CMakeLists.txt
ws_mobile/src/my_worlds/launch/: turtlebot3_restaurant.launch.py
ws_mobile/src/nav2_config/param/: waffle.yaml
