<?xml version="1.0"?>
<package format="3">
  <name>my_worlds</name>
  <version>0.0.1</version>
  <description>Custom Gazebo worlds for TurtleBot3</description>
  <maintainer email="manar@example.com">Manar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>

  <!-- export obligatoire pour que colcon sache gérer -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
